overflow fixed

--- a/public/global.css
+++ b/public/global.css
@@ -3,21 +3,16 @@ html {
 	scroll-snap-points-x: repeat(100vw);
 	scroll-snap-type: x mandatory;
 
-	overflow-y: hidden;
-	-webkit-overflow-y: hidden;
-}
-
-html, body {
-	position: relative;
-	width: 100%;
-	height: 100%;
+	max-height: 100vh !important;
+	height: 100vh !important;
+	
 
 	-webkit-font-smoothing: antialiased;
 	-moz-font-smoothing: antialiased;
 	-o-font-smoothing: antialiased;
-
-	/*overflow-y: hidden;*/
 }
+
+
 
 @font-face {
     font-family: ortica;
@@ -40,11 +35,24 @@ html, body {
 body {
 	/*background-color: rgb(250,250,250);*/
 	background-color: rgb(245,245,245);
-	/*-webkit-overflow-scrolling: touch;*/
-	box-sizing: border-box;
-	margin: 0;
-	/*overflow-y: hidden;*/
+	-webkit-overflow-scrolling: touch;
+	/*box-sizing: border-box;*/
+	margin: 0 !important;
+	padding: 0 !important;
 
+	top: 0vh;
+	left: 0vw;
+
+	/*max-height: 100vh !important;
+	height: 100vh !important;*/
+	height: 100vh;
+	width: 100%;
+
+	-webkit-font-smoothing: antialiased;
+	-moz-font-smoothing: antialiased;
+	-o-font-smoothing: antialiased;
+
+	position: absolute;
 }
 
 
@@ -55,6 +63,8 @@ body {
 .newmain {
 	position: absolute;
 	height: 100%;
+	max-height: 100vh !important;
+
 	width: calc(1600vw + 1px);
 	top: 0px;
 	left: 0px;
@@ -64,15 +74,14 @@ body {
 
     -webkit-overflow-scrolling: touch;
 
-}
-.content {
-	width: calc(100vw - 2px);
-	height: calc(95% - 1px);
-	/*height: calc(90% - 1px);*/
+    padding: 0 !important;
 
-	border-left: 1px solid rgb(70,70,70);
-	border-right: 1px solid rgb(70,70,70);
-	border-top: 1px solid rgb(70,70,70);
+}
+.overflowBreaker {
+	width: calc(100vw - 2px);
+	height: calc(100% - 2px);
+
+	border: 1px solid rgb(70,70,70);
 
 	position: -webkit-sticky !important;
     position: sticky !important;
@@ -81,27 +90,17 @@ body {
   	scroll-snap-align: start;
     -webkit-overflow-scrolling: touch;
 
-    /*border-bottom: 1px solid rgb(70,70,70);*/
+    /*background-color: rgb(250,250,250);*/
+    overflow: hidden;
+}
+.content {
+	position: absolute;
+	width: 100%;
+	height: calc(95%);
+	left: 0%;
+	top: 0%;
 
     background-color: rgb(250,250,250);
-}
-.content:after {
-	content: '';
-	position: absolute;
-	right: -1px;
-	top: 0px;
-	border-right: 1px solid rgb(70,70,70);
-	width: 10px;
-	height: 100vh;
-}
-.content:before {
-	content: '';
-	position: absolute;
-	left: -1px;
-	top: 0px;
-	border-left: 1px solid rgb(70,70,70);
-	width: 10px;
-	height: 100vh;
 }
 
 .activedot {
